src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/cD4AC0001.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram aCD4AC0001 {

}